--- a/vistas/privado/zapatos.html
+++ b/vistas/privado/zapatos.html
@@ -73,9 +73,7 @@
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-
                                     <div class="cards-wrapper">
-
                                         <div class="card cardM">
                                             <div>
                                                 <h4> <small>Nike Dunk Low</small> UNISEX </h4>
@@ -85,7 +83,6 @@
                                                 </a>
                                             </div>
                                         </div>
-
                                         <div class="card cardM">
                                             <div>
                                                 <h4> <small>Nike Dunk Low</small> UNISEX </h4>
@@ -95,7 +92,6 @@
                                                 </a>
                                             </div>
                                         </div>
-
                                         <div class="card cardM">
                                             <div>
                                                 <h4> <small>Nike Dunk Low</small> UNISEX </h4>
@@ -105,7 +101,6 @@
                                                 </a>
                                             </div>
                                         </div>
-
                                         <div class="card cardM">
                                             <div>
                                                 <h4> <small>Nike Dunk Low</small> UNISEX </h4>
@@ -115,14 +110,10 @@
                                                 </a>
                                             </div>
                                         </div>
-
-
                                     </div>
                                 </div>
-
                                 <div class="carousel-item">
                                     <div class="cards-wrapper">
-
                                         <div class="card cardM">
                                             <div>
                                                 <h4> <small>Nike Dunk Low</small> UNISEX </h4>
@@ -132,7 +123,6 @@
                                                 </a>
                                             </div>
                                         </div>
-
                                         <div class="card cardM">
                                             <div>
                                                 <h4> <small>Nike Dunk Low</small> UNISEX </h4>
@@ -142,7 +132,6 @@
                                                 </a>
                                             </div>
                                         </div>
-
                                         <div class="card cardM">
                                             <div>
                                                 <h4> <small>Nike Dunk Low</small> UNISEX </h4>
@@ -152,7 +141,6 @@
                                                 </a>
                                             </div>
                                         </div>
-
                                         <div class="card cardM">
                                             <div>
                                                 <h4> <small>Nike Dunk Low</small> UNISEX </h4>
@@ -259,45 +247,54 @@
                         <div class="ContenedorB2">
                             <div class="ContenedorTotalA1 d-flex flex-column align-items-center">
                                 <div class="contenedor1A d-flex flex-column align-items-center justify-content-evenly">
-                                    <div class="col-12">
+                                    <div class="col-12 d-flex align-items-center justify-content-center">
                                         <label class="form-label text25 m-1 titillium-web-extralight">Agregar
                                             Zapato</label>
                                     </div>
                                     <div class="ContenedorForm">
-                                        <form class="row needs-validation form1" novalidate>
-                                            <div class="col-md-6">
-                                                <label for="nombreInput" class="form-label">Nombre del zapato</label>
-                                                <input type="text" class="form-control" id="nombreInput"
-                                                    placeholder="Ingresa el nombre del zapato" required>
+                                        <form class="needs-validation form1" novalidate>
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <label for="nombreInput" class="form-label">Nombre del
+                                                        zapato</label>
+                                                    <input type="text" class="form-control" id="nombreInput"
+                                                        placeholder="Ingresa el nombre del zapato" required>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <label for="apellidosInput" class="form-label ">Marca del
+                                                        zapato</label>
+                                                    <input type="text" class="form-control" id="apellidosInput"
+                                                        placeholder="Ingresa la marca del zapato" required>
+                                                </div>
+                                                <div class="col-md-6 mt-3">
+                                                    <label for="generoInput" class="form-label ">Genero del
+                                                        zapato</label>
+                                                    <input type="text" class="form-control" id="generoInput"
+                                                        placeholder="Ingresa el genero del zapato" required>
+                                                </div>
+                                                <div class="col-md-6 mt-3">
+                                                    <label for="precioInput" class="form-label ">Precio del
+                                                        zapato</label>
+                                                    <input type="text" class="form-control" id="precioInput"
+                                                        placeholder="Ingresa el precio del zapato" required>
+                                                </div>
+                                                <div class="col-md-6 mt-3">
+                                                    <label for="descInput" class="form-label ">Descripcion del
+                                                        producto</label>
+                                                    <input type="text" class="form-control" id="descInput"
+                                                        style="height: 100px;"
+                                                        placeholder="Ingresa la descripción del producto" required>
+                                                </div>
                                             </div>
-                                            <div class="col-md-6">
-                                                <label for="apellidosInput" class="form-label ">Marca del zapato</label>
-                                                <input type="text" class="form-control" id="apellidosInput"
-                                                    placeholder="Ingresa la marca del zapato" required>
+                                            <div class="contenedorBotones1A col-md-12 mt-3">
+                                                <button
+                                                    class="btn btnCan btn-primary shadow text18 titillium-web-regular"
+                                                    type="submit">Cancelar</button>
+                                                <button
+                                                    class="btn btnAddD btn-primary shadow text18 titillium-web-regular"
+                                                    type="submit">Agregar</button>
                                             </div>
-                                            <div class="col-md-6 mt-3">
-                                                <label for="generoInput" class="form-label ">Genero del zapato</label>
-                                                <input type="text" class="form-control" id="generoInput"
-                                                    placeholder="Ingresa el genero del zapato" required>
-                                            </div>
-                                            <div class="col-md-6 mt-3">
-                                                <label for="precioInput" class="form-label ">Precio del zapato</label>
-                                                <input type="text" class="form-control" id="precioInput"
-                                                    placeholder="Ingresa el precio del zapato" required>
-                                            </div>
-                                            <div class="col-md-6 mt-3">
-                                                <label for="descInput" class="form-label ">Descripcion del producto</label>
-                                                <input type="text" class="form-control" id="descInput" style="height: 100px;"
-                                                    placeholder="Ingresa la descripción del producto" required>
-                                            </div>
-                                            <div class="contenedorBotones1A col-md-6 mt-3">
-                                        <button class="btn btnCan btn-primary shadow text18 titillium-web-regular"
-                                            type="submit">Cancelar</button>
-                                        </div>
-                                        <div class="contenedorBotones1A col-md-6 mt-3">
-                                            <button class="btn btnAddD btn-primary shadow text18 titillium-web-regular"
-                                                type="submit">Agregar</button>
-                                            </div>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
@@ -308,7 +305,6 @@
         </div>
         </div>
         </div>
-
         </div>
 
         <!-- Modal para COLORES -->
