--- a/vistas/privado/clientes.html
+++ b/vistas/privado/clientes.html
@@ -165,8 +165,10 @@
                             <!-- Campo de estado -->
                             <div class="col-sm-12 col-md-6">
                                 <label for="estadoCliente" class="form-label">Estado</label>
-                                <input id="estadoCliente" type="text" name="estadoCliente" class="form-control"
-                                    required>
+                                <select class="form-select form-control" id="estadoCliente" aria-label="estadoCliente">
+                                    <option selected value="1">Vigente</option>
+                                    <option value="2">Inactivo</option>
+                                </select required>
                             </div>
                         </div>
                         <!--Footer del modal-->
