--- a/vistas/privado/index.html
+++ b/vistas/privado/index.html
@@ -24,10 +24,10 @@ TODO importante // realtando algo
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <!-- *Llamada al hoja de estilo css -->
-    <link href="../../recursos/estilos/privado/index.css" rel="stylesheet">
     <!-- *Llamada al hoja de fuentes -->
     <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
+    <!-- *Llamada al hoja de estilo css -->
+    <link href="../../recursos/estilos/privado/index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -45,7 +45,7 @@ TODO importante // realtando algo
             <!-- Formulario para iniciar sesión -->
             <div class="row 3">
                 <div class="col-sm-8 offset-sm-2">
-                    <form class="d-none bg-light rounded-5 p-3" style="border-color: #146A93;" id="loginForm">
+                    <form class="d-none bg-light rounded-5 p-3 bordesAzul" id="loginForm">
                         <div class="my-3"></div>
                         <!-- Contenedor para el titulo del formulario-->
                         <div
@@ -64,8 +64,8 @@ TODO importante // realtando algo
                                         electrónico</label>
                                 </div>
                                 <input id="correo_electronico" type="email" name="correo_electronico"
-                                    class="form-control titillium-web-regular" placeholder="pollo.camperosv@gmail.com"
-                                    style="border-color: #146A93;" required>
+                                    class="form-control titillium-web-regular bordesAzul"
+                                    placeholder="pollo.camperosv@gmail.com" required>
                             </div>
                             <!--Contenedor del Input de contraseña-->
                             <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
@@ -75,21 +75,20 @@ TODO importante // realtando algo
                                     <label for="clave" class="form-label titillium-web-regular">Contraseña</label>
                                 </div>
                                 <input id="clave" type="password" name="clave"
-                                    class="form-control titillium-web-regular" placeholder="●●●●●●●●●●"
-                                    style="border-color: #146A93" required>
+                                    class="form-control titillium-web-regular bordesAzul" placeholder="●●●●●●●●●●"
+                                    required>
                             </div>
                             <!--Redirrecion de olvidaste tu contraseña -->
                             <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
-                                for="olvidaste_clave" style="color: #146A93;">
-                                <a href="javascript:void(0);" onclick="showForgotPasswordForm()">¿Olvidaste tu
+                                for="olvidaste_clave">
+                                <a href="javascript:void(0);" class="color-5blue" onclick="showForgotPasswordForm()">¿Olvidaste tu
                                     contraseña?</a>
                             </label>
                             <!--Contenedor boton del inicio de sesion -->
                             <div class="d-flex justify-content-center">
                                 <div class="text-center col-sm-12 col-md-6">
-                                    <button type="submit" class="btn btn-primary titillium-web-regular"
-                                        style="background-color: #146A93; width: 100%;" onclick="showDashboard()"><i
-                                            class="bi bi-send"></i>
+                                    <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"
+                                        onclick="showDashboard()"><i class="bi bi-send"></i>
                                         Iniciar sesión</button>
                                 </div>
                             </div>
@@ -100,9 +99,8 @@ TODO importante // realtando algo
                 <!-- Formulario para olvidaste contraseña, paso 1 -->
                 <div class="row 3">
                     <div class="col-sm-8 offset-sm-2">
-                            <!--Comienzo del formulario de restablecer contrarseña -->
-                        <form class="d-none bg-light rounded-5 p-3" style="border-color: #146A93;"
-                            id="forgetpasswordstepone">
+                        <!--Comienzo del formulario de restablecer contrarseña -->
+                        <form class="d-none bg-light rounded-5 p-3 bordesAzul" id="forgetpasswordstepone">
                             <div class="my-3"></div>
                             <!--Contenedor del texto de restablecimiento de contraseña -->
                             <div
@@ -123,21 +121,21 @@ TODO importante // realtando algo
                                             electrónico</label>
                                     </div>
                                     <input id="correo_electronico_paso1" type="email" name="correo_electronico_paso1"
-                                        class="form-control titillium-web-regular"
-                                        placeholder="pollo.camperosv@gmail.com" style="border-color: #146A93;" required>
+                                        class="form-control titillium-web-regular bordesAzul"
+                                        placeholder="pollo.camperosv@gmail.com" required>
                                 </div>
                                 <!--Texto para volver al inicio de sesion -->
-                                <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
-                                    for="volver_inicio_sesion" style="color: #146A93;">
-                                    <a href="javascript:void(0);" onclick="showLoginForm()">
+                                <label
+                                    class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
+                                    for="volver_inicio_sesion">
+                                    <a href="javascript:void(0);" class="color-5blue" onclick="showLoginForm()">
                                         Volver al inicio de sesión</a>
                                 </label>
                                 <!--Boton de mandar código -->
                                 <div class="d-flex justify-content-center">
                                     <div class="text-center col-sm-12 col-md-6">
-                                        <button type="submit" class="btn btn-primary titillium-web-regular"
-                                            style="background-color: #146A93; width: 100%;" href="javascript:void(0);"
-                                            onclick="showForgotPasswordStepTwoForm()">
+                                        <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"
+                                            href="javascript:void(0);" onclick="showForgotPasswordStepTwoForm()">
                                             <i class="bi bi-send"></i>
                                             Mandar código
                                         </button>
@@ -152,8 +150,8 @@ TODO importante // realtando algo
                 <div class="row 3">
                     <div class="col-sm-8 offset-sm-2">
                         <!--Comienzo del formulario del paso 2 del restablecimiento de contraseña -->
-                        <form class="d-none bg-light rounded-5 p-3" style="border-color: #146A93;"
-                            id="forgetpasswordsteptwo" onsubmit="showLoginForm(event)">
+                        <form class="d-none bg-light rounded-5 p-3 bordesAzul" id="forgetpasswordsteptwo"
+                            onsubmit="handleLoginFormSubmission(event)">
                             <div class="my-3"></div>
                             <!--Contenedor del texto y indicaciones del codigo de verificacion-->
                             <div
@@ -174,22 +172,23 @@ TODO importante // realtando algo
                                         </label>
                                     </div>
                                     <input id="codigoPaso2" type="text" name="codigoRestablecerContra"
-                                        class="form-control titillium-web-regular" placeholder="r37grforiufewf32"
-                                        style="border-color: #146A93;" required>
+                                        class="form-control titillium-web-regular bordesAzul"
+                                        placeholder="r37grforiufewf32" required>
                                 </div>
                                 <!--Contenedor del texto de volver al paso anterior -->
-                                <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
-                                    for="volver" style="color: #146A93;">
-                                    <a href="javascript:void(0);" onclick="showForgotPasswordForm()">
+                                <label
+                                    class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
+                                    for="volver">
+                                    <a href="javascript:void(0);" onclick="showForgotPasswordForm()" class="color-5blue">
                                         Volver al paso anterior
                                     </a>
                                 </label>
                                 <!--Contenedor del boton de confirmar codigo -->
                                 <div class="d-flex justify-content-center">
                                     <div class="text-center col-sm-12 col-md-6">
-                                        <button type="submit" class="btn btn-primary titillium-web-regular"
-                                            style="background-color: #146A93; width: 100%;" href="javascript:void(0);"
-                                            onclick="showForgotPasswordStepThreeForm()"><i class="bi bi-send"></i>
+                                        <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"
+                                            href="javascript:void(0);" onclick="showForgotPasswordStepThreeForm()"><i
+                                                class="bi bi-send"></i>
                                             Confirmar código</button>
                                     </div>
                                 </div>
@@ -202,8 +201,7 @@ TODO importante // realtando algo
                 <div class="row 3">
                     <div class="col-sm-8 offset-sm-2">
                         <!--Comienzo del formulario del paso tres -->
-                        <form class="d-none bg-light rounded-5 p-3" style="border-color: #146A93;"
-                            id="forgetPasswordStepThree">
+                        <form class="d-none bg-light rounded-5 p-3 bordesAzul" id="forgetPasswordStepThree">
                             <div class="my-3"></div>
                             <!--Contenedor del texto sobre el paso tres de nueva contraseña -->
                             <div
@@ -224,8 +222,8 @@ TODO importante // realtando algo
                                     </div>
                                     <!--Contenedor del input de contraseña-->
                                     <input id="clavePaso3" type="password" name="clavePaso3"
-                                        class="form-control titillium-web-regular" placeholder="●●●●●●●●●●"
-                                        style="border-color: #146A93" required>
+                                        class="form-control titillium-web-regular bordesAzul" placeholder="●●●●●●●●●●"
+                                        required>
                                 </div>
                                 <!--Contenedor del Input de confirmar contraseña -->
                                 <div class="col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
@@ -238,16 +236,16 @@ TODO importante // realtando algo
                                     </div>
                                     <!--Contenedor del input de contraseña-->
                                     <input id="clave2_paso3" type="password" name="clave2_paso3"
-                                        class="form-control titillium-web-regular" placeholder="●●●●●●●●●●"
-                                        style="border-color: #146A93" required>
+                                        class="form-control titillium-web-regular bordesAzul" placeholder="●●●●●●●●●●"
+                                        required>
                                 </div>
                                 <div class="mb-2"></div>
                                 <!--Contenedor donde estan los botones de restablecer contraseña-->
                                 <div class="d-flex justify-content-center">
                                     <div class="text-center col-sm-12 col-md-6">
-                                        <button type="submit" class="btn btn-primary titillium-web-regular"
-                                            style="background-color: #146A93; width: 100%;"><i class="bi bi-send"
-                                                href="javascript:void(0);" onclick="showLoginForm()"></i>
+                                        <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"><i
+                                                class="bi bi-send" href="javascript:void(0);"
+                                                onclick="showLoginForm()"></i>
                                             Restablecer contraseña</button>
                                     </div>
                                 </div>
