--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -96,15 +96,21 @@
                                             required>
                                     </div>
                                     <div class="col-md-6 mt-3">
-                                        <label for="estadoInput" class="form-label ">Estado del
+                                        <label for="estadoInput" class="form-label">Estado del
                                             Trabajador</label>
-                                        <input type="text" class="form-control" id="estadoInput" placeholder="Vigente"
-                                            required>
+                                        <select class="form-label form-select" id="estadoInput"
+                                            aria-label="Estado de usuario" required>
+                                            <option value="" disabled selected>Selecciona un estado</option>
+                                            <option value="1">Vigente</option>
+                                            <option value="1">Inactivo</option>
+                                        </select>
                                     </div>
                                     <div class="col-md-6 mt-3">
                                         <label for="nivelInput" class="form-label">Nivel de Usuario</label>
-                                        <select class="form-select" aria-label="Nivel de Usuario" required>
+                                        <select class="form-label form-select" id="nivelInput"
+                                            aria-label="Nivel de usuario" required>
                                             <option value="" disabled selected>Selecciona un nivel</option>
+                                            <option value="1">Admin</option>
                                             <option value="1">Empleado</option>
                                             <option value="2">Repartidor</option>
                                         </select>
@@ -137,7 +143,7 @@
                                         <th scope="col">Teléfono</th>
                                         <th scope="col">Correo</th>
                                         <th scope="col">Nivel</th>
-
+                                        <th scope="col">Estado</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -149,6 +155,7 @@
                                         <td>1234-5678</td>
                                         <td>correo@gmail.com</td>
                                         <td>Empleado</td>
+                                        <td>Vigente</td>
                                     </tr>
                                     <tr ondblclick="openDetails(this)">
                                         <td>2</td>
@@ -158,6 +165,7 @@
                                         <td>0987-6543</td>
                                         <td>correo@gmail.com</td>
                                         <td>Empleado</td>
+                                        <td>Inactivo</td>
                                     </tr>
                                     <tr ondblclick="openDetails(this)">
                                         <td>3</td>
@@ -167,6 +175,7 @@
                                         <td>1836-4783</td>
                                         <td>correo@gmail.com</td>
                                         <td>Empleado</td>
+                                        <td>Vigente</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -237,14 +246,21 @@
                                 <!--Campo del estado del trabajador-->
                                 <div class="col-sm-12 col-md-6">
                                     <label for="estadoTrabajador" class="form-label">Estado</label>
-                                    <input id="estadoTrabajador" type="text" name="estadoTrabajador"
-                                        class="form-control editableInput" required>
+                                    <select class="form-select form-control" id="estadoTrabajador"
+                                        aria-label="estadoTrabajador">
+                                        <option selected value="1">Vigente</option>
+                                        <option value="2">Inactivo</option>
+                                    </select required>
                                 </div>
                                 <!--Campo del nivel del trabajador-->
                                 <div class="col-sm-12 col-md-6">
                                     <label for="nivelTrabajador" class="form-label">Nivel</label>
-                                    <input id="nivelTrabajador" type="text" name="nivelTrabajador"
-                                        class="form-control editableInput" required>
+                                    <select class="form-select form-control" id="nivelTrabajador"
+                                        aria-label="nivelTrabajador">
+                                        <option selected value="1">Admin</option>
+                                        <option value="2">Empleado</option>
+                                        <option value="2">Repartidor</option>
+                                    </select required>
                                 </div>
                                 <!--Campo del contraseña del trabajador-->
                                 <div class="col-sm-12 col-md-6">
