--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -12,7 +12,7 @@ TODO importante // realtando algo
 
 <head>
     <!-- TODO Título del documento -->
-    <title></title>
+    <title>Inicio - FeasVerse</title>
     <!-- Metadatos de la página web -->
     <meta charset="utf-8">
     <meta name="author" content="FeasVerseCompany">
@@ -23,315 +23,31 @@ TODO importante // realtando algo
     <!-- *Llamada a las hojas de estilos del framework -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-        <!-- *Llamada a las hojas de estilos propios de css -->
-        <link href="../../recursos/estilos/publico/index.css" rel="stylesheet">
-        <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
+    <!-- *Llamada a las hojas de estilos propios de css -->
+    <link href="../../recursos/estilos/publico/index.css" rel="stylesheet">
+    <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
+    <link href="../../recursos/estilos/publico/plantilla.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- *Contenido principal del documento -->
-    <main> <!--*Carrusel principal-->
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner carrusel position-relative">
-                <div class="z-2 position-absolute">
-                    <div>
-                        <h1 class="text-white titillium-web-bold text48">
-                            ¡Bienvenido a FEASVERSE!
-                        </h1>
-                        <h2 class="text-white titillium-web-light">
-                            Descubre el mundo del auténtico estilo en zapatillas
-                        </h2>
-                    </div>
-                </div>
-                <div class="carruselA">
-                    <div class="carousel-item active">
-                        <img src="../../recursos/imagenes/carrusel/sneakers1.svg" class="d-block w-100 opacity-50"
-                            alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../recursos/imagenes/carrusel/sneakers2.svg" class="d-block w-100 opacity-50"
-                            alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../recursos/imagenes/carrusel/sneakers3.svg" class="d-block w-100 opacity-50"
-                            alt="...">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--*Carrusel de marcas-->
-        <div class="linea mt-5"></div>
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-
-                    <div class="cards-wrapper">
-
-                        <div class="card cardM">
-                            <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
-                            </div>
-                        </div>
-
-                        <div class="card cardM">
-                            <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
-                            </div>
-                        </div>
-
-                        <div class="card cardM">
-                            <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
-                            </div>
-                        </div>
-
-                        <div class="card cardM">
-                            <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
-                            </div>
-                        </div>
-
-                        <div class="card cardM">
-                            <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <div class="cards-wrapper">
-
-                        <div class="card cardM">
-                            <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
-                            </div>
-                        </div>
-
-                        <div class="card cardM">
-                            <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
-                            </div>
-                        </div>
-
-                        <div class="card cardM">
-                            <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
-                            </div>
-                        </div>
-
-                        <div class="card cardM">
-                            <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
-                            </div>
-                        </div>
-
-                        <div class="card cardM">
-                            <div class="image-wrapper">
-                                <a href=""><img src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev a" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-previous" aria-hidden="true"><img
-                        src="../../recursos/imagenes/icons/slideizq.svg" alt=""></span>
-                <span class="visually-hidden bg-primary">Anterior</span>
-            </button>
-            <button class="carousel-control-next  a" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-" aria-hidden="true"> <img
-                        src="../../recursos/imagenes/icons/slidedrch.svg" alt=""></span>
-                <span class="visually-hidden">Sigiente</span>
-            </button>
-        </div>
-        <div class="linea mb-5"></div>
-
-        <!--*Slider de colección más reciente-->
-        <h1 class="titillium-web-regular text35 mx-5 text-black mt-3">Nuestra Colección Más Reciente</h1>
-        <div class="overflow-scroll containerCards d-flex flex-nowrap">
-            <div class="card col-4" id="cardC">
-                <a href="" class="text15">
-                    <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
-                    </div>
-                    <div class="lineImgC"></div>
-                    <div class="card-body">
-                        <div class="d-flex flex-row justify-content-between">
-                            <div class="column1">
-                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
-                                    <p class="titillium-web-extralight text18 clgr3">Zapato UNISEX</p>
-                                </h1>
-
-                                <div class="d-flex flex-row align-items-center mt-2 ">
-                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
-                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
-                                </div>
-                            </div>
-
-                            <div class="column2">
-                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
-                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="card col-4" id="cardC">
-                <a href="" class="text15">
-                    <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
-                    </div>
-                    <div class="lineImgC"></div>
-                    <div class="card-body">
-                        <div class="d-flex flex-row justify-content-between">
-                            <div class="column1">
-                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
-                                    <p class="titillium-web-extralight text18 clgr3">Zapato UNISEX</p>
-                                </h1>
-
-                                <div class="d-flex flex-row align-items-center mt-2 ">
-                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
-                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
-                                </div>
-                            </div>
-
-                            <div class="column2">
-                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
-                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="card col-4" id="cardC">
-                <a href="" class="text15">
-                    <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
-                    </div>
-                    <div class="lineImgC"></div>
-                    <div class="card-body">
-                        <div class="d-flex flex-row justify-content-between">
-                            <div class="column1">
-                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
-                                    <p class="titillium-web-extralight text18 clgr3">Zapato UNISEX</p>
-                                </h1>
-
-                                <div class="d-flex flex-row align-items-center mt-2 ">
-                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
-                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
-                                </div>
-                            </div>
-
-                            <div class="column2">
-                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
-                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="card col-4" id="cardC">
-                <a href="" class="text15">
-                    <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
-                    </div>
-                    <div class="lineImgC"></div>
-                    <div class="card-body">
-                        <div class="d-flex flex-row justify-content-between">
-                            <div class="column1">
-                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
-                                    <p class="titillium-web-extralight text18 clgr3">Zapato UNISEX</p>
-                                </h1>
-
-                                <div class="d-flex flex-row align-items-center mt-2 ">
-                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
-                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
-                                </div>
-                            </div>
-
-                            <div class="column2">
-                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
-                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-
-            <div class="card col-4" id="cardC">
-                <a href="" class="text15">
-                    <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
-                    </div>
-                    <div class="lineImgC"></div>
-                    <div class="card-body">
-                        <div class="d-flex flex-row justify-content-between">
-                            <div class="column1">
-                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
-                                    <p class="titillium-web-extralight text18 clgr3">Zapato UNISEX</p>
-                                </h1>
-
-                                <div class="d-flex flex-row align-items-center mt-2 ">
-                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
-                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
-                                </div>
-                            </div>
-
-                            <div class="column2">
-                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
-                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="card col-4" id="cardC">
-                <a href="" class="text15">
-                    <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
-                    </div>
-                    <div class="lineImgC"></div>
-                    <div class="card-body">
-                        <div class="d-flex flex-row justify-content-between">
-                            <div class="column1">
-                                <h1 class="titillium-web-bold text25 text-black">Air Jordan 3
-                                    <p class="titillium-web-extralight text18 clgr3">Zapato UNISEX</p>
-                                </h1>
-
-                                <div class="d-flex flex-row align-items-center mt-2 ">
-                                    <img src="../../recursos/imagenes/icons/estrellaicon.svg" alt="">
-                                    <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar">5</p>
-                                </div>
-                            </div>
-
-                            <div class="column2">
-                                <p class="titillium-web-extralight text18 mb-5 clgr3">5 colores</p>
-                                <h1 class="titillium-web-bold text25 text-black"> $285</h1>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-        <div class="pb-3"></div>
-        <!--*Slider de selección especial-->
-        <h1 class="titillium-web-regular text35 mx-5 text-black mt-5">Selección Especial de Nuestro Equipo</h1>
-        </div>
-        <div class="pb-5"></div>
+    <main>
+        
     </main>
+
+    <footer>
+            
+    </footer>
+
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!--*Libreria de mensajes-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- *Llamada al controlador de la página web -->
+    <script type="text/javascript" src="/controlador/publico/index.js"></script>
+    <!-- *Llamada al controlador del sitio publico -->
+    <script type="text/javascript" src="/controlador/utilidades/publico.js"></script>
 </body>
 
 </html>
