Carrusel principal terminado index publico

--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -32,7 +32,32 @@ TODO importante // realtando algo
 
 <body>
     <!-- *Contenido principal del documento -->
-    <main>
+    <main> <!-- *Carrusel principal -->
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner carrusel position-relative">
+                <div class="z-2 position-absolute">
+                    <div>
+                        <h1 class="text-white titillium-web-bold ">
+                            ¡Bienvenido a FEASVERSE!
+                        </h1>
+                        <h2 class="text-white titillium-web-light">
+                            Descubre el mundo del auténtico estilo en zapatillas
+                        </h2>
+                    </div>
+                </div>
+                <div class="carruselA">
+                    <div class="carousel-item active">
+                        <img src="../../recursos/imagenes/carrusel/sneakers1.svg" class="d-block w-100 opacity-50 imgC1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../../recursos/imagenes/carrusel/sneakers2.svg" class="d-block w-100 opacity-50 imgC1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../../recursos/imagenes/carrusel/sneakers3.svg" class="d-block w-100 opacity-50 imgC1">
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
