Cambios de diseño en pedido y cambios en el style

--- a/vistas/privado/pedidos.html
+++ b/vistas/privado/pedidos.html
@@ -143,7 +143,8 @@
                                                                             <div id="contenedorCategoriaPedido"
                                                                                 class="col-lg-12 mt-5 mb-3 d-flex align-items-center">
                                                                                 <!--contenedor de Nuevos Pedidos-->
-                                                                                <div class="bg-color-1blue rounded-2 ms-2 col-lg-3 d-flex flex-column justify-content-center align-items-center nuevosPedidos"
+                                                                                <div id="divPedidosPendientes"
+                                                                                    class="bg-color-1blue rounded-2 ms-2 col-lg-3 d-flex flex-column justify-content-center align-items-center nuevosPedidos"
                                                                                     onclick="mostrarNuevosPedidos()">
                                                                                     <div
                                                                                         class="justify-content-center align-items-center">
@@ -160,7 +161,8 @@
                                                                                     </div>
                                                                                 </div>
                                                                                 <!--contenedor de Pedidos en progreso-->
-                                                                                <div class="bg-color-1blue rounded-2 col-lg-3 d-flex flex-column justify-content-center align-items-center pedidosProgreso"
+                                                                                <div id="divPedidosProgreso"
+                                                                                    class="bg-color-1blue rounded-2 col-lg-3 d-flex flex-column justify-content-center align-items-center pedidosProgreso"
                                                                                     onclick="mostrarPedidosProgreso()">
                                                                                     <div
                                                                                         class="justify-content-center align-items-center">
@@ -177,7 +179,8 @@
                                                                                     </div>
                                                                                 </div>
                                                                                 <!--contenedor de Pedidos Entregados-->
-                                                                                <div class="bg-color-1blue rounded-2 col-lg-3 d-flex flex-column justify-content-center align-items-center pedidosEntregados"
+                                                                                <div id="divPedidosEntregados"
+                                                                                    class="bg-color-1blue rounded-2 col-lg-3 d-flex flex-column justify-content-center align-items-center pedidosEntregados"
                                                                                     onclick="mostrarPedidosEntregados()">
                                                                                     <div
                                                                                         class="justify-content-center align-items-center">
@@ -202,7 +205,7 @@
                                                                             <div id="cardsDeNuevosPedidos"
                                                                                 class="mt-4 col-lg-12 d-none d-flex flex-column">
                                                                                 <div
-                                                                                    class="contenedorDeNuevosPedidosImagenTexto offset-lg-2 col-lg-8 bg-color-1blue d-flex justify-content-center align-items-center rounded-3">
+                                                                                    class="contenedorDeNuevosPedidosImagenTexto offset-lg-2 col-lg-8 bg-color-4blue d-flex justify-content-center align-items-center rounded-3">
                                                                                     <img id="imagenPedido"
                                                                                         src="../../recursos/imagenes/icons/notebook.svg"
                                                                                         class="img-fluid mt-3 mb-3 me-1 ms-1"
@@ -461,7 +464,7 @@
                                                                             <div id="cardsDePedidosProgreso"
                                                                                 class="mt-4 col-lg-12 d-none">
                                                                                 <div
-                                                                                    class="contenedorDeNuevosPedidosImagenTexto offset-lg-2 col-lg-8 bg-color-1blue d-flex justify-content-center align-items-center rounded-3">
+                                                                                    class="contenedorDeNuevosPedidosImagenTexto offset-lg-2 col-lg-8 bg-color-4blue d-flex justify-content-center align-items-center rounded-3">
                                                                                     <img id="imagenPedido"
                                                                                         src="../../recursos/imagenes/icons/camion.svg"
                                                                                         class="img-fluid mt-3 mb-3 me-1 ms-1"
@@ -720,7 +723,7 @@
                                                                             <div id="cardsDePedidosEntregado"
                                                                                 class="mt-4 col-lg-12 d-none">
                                                                                 <div
-                                                                                    class="contenedorDeNuevosPedidosImagenTexto offset-lg-2 col-lg-8 bg-color-1blue d-flex justify-content-center align-items-center rounded-3">
+                                                                                    class="contenedorDeNuevosPedidosImagenTexto offset-lg-2 col-lg-8 bg-color-4blue d-flex justify-content-center align-items-center rounded-3">
                                                                                     <img id="imagenPedido"
                                                                                         src="../../recursos/imagenes/icons/entregado.svg"
                                                                                         class="img-fluid mt-3 mb-3 me-1 ms-1"
