--- a/vistas/privado/index.html
+++ b/vistas/privado/index.html
@@ -81,7 +81,8 @@ TODO importante // realtando algo
                             <!--Redirrecion de olvidaste tu contraseña -->
                             <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
                                 for="olvidaste_clave">
-                                <a href="javascript:void(0);" class="color-5blue" onclick="showForgotPasswordForm()">¿Olvidaste tu
+                                <a href="javascript:void(0);" class="color-5blue"
+                                    onclick="showForgotPasswordForm()">¿Olvidaste tu
                                     contraseña?</a>
                             </label>
                             <!--Contenedor boton del inicio de sesion -->
@@ -125,8 +126,7 @@ TODO importante // realtando algo
                                         placeholder="pollo.camperosv@gmail.com" required>
                                 </div>
                                 <!--Texto para volver al inicio de sesion -->
-                                <label
-                                    class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
+                                <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
                                     for="volver_inicio_sesion">
                                     <a href="javascript:void(0);" class="color-5blue" onclick="showLoginForm()">
                                         Volver al inicio de sesión</a>
@@ -176,10 +176,10 @@ TODO importante // realtando algo
                                         placeholder="r37grforiufewf32" required>
                                 </div>
                                 <!--Contenedor del texto de volver al paso anterior -->
-                                <label
-                                    class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
+                                <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
                                     for="volver">
-                                    <a href="javascript:void(0);" onclick="showForgotPasswordForm()" class="color-5blue">
+                                    <a href="javascript:void(0);" onclick="showForgotPasswordForm()"
+                                        class="color-5blue">
                                         Volver al paso anterior
                                     </a>
                                 </label>
