cambios de html a css del style

--- a/vistas/privado/marcas.html
+++ b/vistas/privado/marcas.html
@@ -86,7 +86,7 @@
                                 <h1 class="text-white titillium-web-regular text25 text-white mt-3">Foto de la marca
                                 </h1>
                                 <!-- Imagen seleccionada y botón para elegir imagen -->
-                                <img id="selectedImage" style="width: 15rem; height: 15rem; border-radius: 10px;"
+                                <img id="selectedImage" class="sizeCard borderImage"
                                     src="https://mdbootstrap.com/img/Photos/Others/placeholder.jpg"
                                     alt="example placeholder" />
                                 <div class="btn btn-primary btn-rounded mt-3">
@@ -112,19 +112,19 @@
                         <div class="d-flex flex-column mb-3 justify-content-center flex-wrap">
                             <div class="cardContainer d-flex flex-row justify-content-around m-5 flex-wrap">
                                 <!-- Tarjetas de marcas con imágenes -->
-                                <div class="card" style="width: 15rem; height: 15rem;" ondblclick="openDetails()">
+                                <div class="card sizeCard" ondblclick="openDetails()">
                                     <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
                                 </div>
-                                <div class="card" style="width: 15rem; height: 15rem;" ondblclick="openDetails()">
+                                <div class="card sizeCard" ondblclick="openDetails()">
                                     <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
                                 </div>
-                                <div class="card" style="width: 15rem; height: 15rem;" ondblclick="openDetails()">
+                                <div class="card sizeCard" ondblclick="openDetails()">
                                     <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
                                 </div>
-                                <div class="card" style="width: 15rem; height: 15rem;" ondblclick="openDetails()">
+                                <div class="card sizeCard" ondblclick="openDetails()">
                                     <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
                                 </div>
-                                <div class="card" style="width: 15rem; height: 15rem;" ondblclick="openDetails()">
+                                <div class="card sizeCard" ondblclick="openDetails()">
                                     <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
                                 </div>
                             </div>
@@ -165,7 +165,7 @@
                                 <h1 class="text-white titillium-web-regular text25 text-white mt-3">Foto de la marca
                                 </h1>
                                 <!-- Imagen seleccionada y botón para elegir imagen -->
-                                <img id="selectedImageD" style="width: 15rem; height: 15rem; border-radius: 10px;"
+                                <img id="selectedImageD sizeCard borderImage"
                                     src="https://mdbootstrap.com/img/Photos/Others/placeholder.jpg"
                                     alt="example placeholder" />
                                 <div class="btn btn-primary btn-rounded mt-3">
