Inicio de detalles - zapato

--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -157,9 +157,9 @@ TODO importante // realtando algo
         <h1 class="titillium-web-regular text35 mx-5 text-black mt-3">Nuestra colección más reciente</h1>
         <div class="containerCards d-flex flex-nowrap">
             <div class="card col-4" id="cardC">
-                <a href="" class="text15">
+                <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
                     </div>
                     <div class="lineImgC"></div>
                     <div class="card-body">
@@ -185,9 +185,9 @@ TODO importante // realtando algo
             </div>
 
             <div class="card col-4" id="cardC">
-                <a href="" class="text15">
+                <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
                     </div>
                     <div class="lineImgC"></div>
                     <div class="card-body">
@@ -213,9 +213,9 @@ TODO importante // realtando algo
             </div>
 
             <div class="card col-4" id="cardC">
-                <a href="" class="text15">
+                <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
                     </div>
                     <div class="lineImgC"></div>
                     <div class="card-body">
@@ -241,9 +241,9 @@ TODO importante // realtando algo
             </div>
 
             <div class="card col-4" id="cardC">
-                <a href="" class="text15">
+                <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
                     </div>
                     <div class="lineImgC"></div>
                     <div class="card-body">
@@ -275,9 +275,9 @@ TODO importante // realtando algo
         <h1 class="titillium-web-regular text35 mx-5 text-black mt-3">Selección especial de nuestro equipo</h1>
         <div class="containerCards d-flex flex-nowrap">
             <div class="card col-4" id="cardC">
-                <a href="" class="text15">
+                <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
                     </div>
                     <div class="lineImgC"></div>
                     <div class="card-body">
@@ -303,9 +303,9 @@ TODO importante // realtando algo
             </div>
 
             <div class="card col-4" id="cardC">
-                <a href="" class="text15">
+                <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
                     </div>
                     <div class="lineImgC"></div>
                     <div class="card-body">
@@ -331,9 +331,9 @@ TODO importante // realtando algo
             </div>
 
             <div class="card col-4" id="cardC">
-                <a href="" class="text15">
+                <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
                     </div>
                     <div class="lineImgC"></div>
                     <div class="card-body">
@@ -359,9 +359,9 @@ TODO importante // realtando algo
             </div>
 
             <div class="card col-4" id="cardC">
-                <a href="" class="text15">
+                <a href="/vistas/publico/detalle_zapato.html" class="text15">
                     <div class="image-wrapper2">
-                        <img src="../../recursos/imagenes/sneakersExample.svg" alt="...">
+                        <img src="../../recursos/imagenes/airJordan1.svg" alt="...">
                     </div>
                     <div class="lineImgC"></div>
                     <div class="card-body">
@@ -385,7 +385,6 @@ TODO importante // realtando algo
                     </div>
                 </a>
             </div>
-
         </div>
         <div class="pb-3"></div>
 
